--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
@@ -38,6 +38,8 @@
     <packaging>jar</packaging>
 
     <name>JBoss Application Server: Mobicents Sip Servlets Adaptation Layer</name>
+	<description>>JBoss Application Server: Mobicents Sip Servlets Adaptation Layer</description>
+	<url>http://www.mobicents.org</url>
 
     <properties>
         <!-- MSS -->
@@ -52,6 +54,25 @@
         <mobicents.jain.sip.ext.version>1.1-SNAPSHOT</mobicents.jain.sip.ext.version>
         <dnsjava.version>2.1.0</dnsjava.version>
     </properties>
+
+	<distributionManagement>
+	    <repository>
+	      <id>mobicents-releases-repository</id>
+	      <name>Mobicents Releases Repository</name>
+	      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>mobicents-snapshots-repository</id>
+	      <name>Mobicents Snapshots Repository</name>
+	      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	    </snapshotRepository>
+	  </distributionManagement>
+
+	 <scm>
+                <connection>scm:git:https://code.google.com/p/sipservlets/</connection>
+                <developerConnection>scm:git:https://code.google.com/p/sipservlets/</developerConnection>
+                <url>https://code.google.com/p/sipservlets/</url>
+        </scm>
 
     <build>
         <plugins>
@@ -78,7 +99,83 @@
             <enabled>false</enabled>
          </snapshots>
       </pluginRepository>
+<pluginRepository>
+                          <id>mobicents-public-repository-group</id>
+                          <name>Mobicens Public Maven Repository Group</name>
+                          <url>https://oss.sonatype.org/content/groups/public</url>
+                          <layout>default</layout>
+                          <releases>
+                            <enabled>true</enabled>
+                            <updatePolicy>never</updatePolicy>
+                          </releases>
+                          <snapshots>
+                            <enabled>true</enabled>
+                            <updatePolicy>never</updatePolicy>
+                          </snapshots>
+                </pluginRepository>
+		<pluginRepository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Maven Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</pluginRepository>
 </pluginRepositories>
+
+
+<repositories>
+		<repository>
+                          <id>mobicents-public-repository-group</id>
+                          <name>Mobicens Public Maven Repository Group</name>
+                          <url>https://oss.sonatype.org/content/groups/public</url>
+                          <layout>default</layout>
+                          <releases>
+                            <enabled>true</enabled>
+                            <updatePolicy>never</updatePolicy>
+                          </releases>
+                          <snapshots>
+                            <enabled>true</enabled>
+                            <updatePolicy>never</updatePolicy>
+                          </snapshots>
+                </repository>
+		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Maven Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>jboss-deprecated-repository</id>
+			<name>JBoss Deprecated Maven Repository</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/deprecated/ 
+	            </url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
     <dependencies>
 
 <dependency>
@@ -240,5 +337,31 @@
                 </plugins>
             </build>
         </profile>
+	<profile>
+                      <id>release-sign-artifacts</id>
+                      <activation>
+                        <property>
+                          <name>performRelease</name>
+                          <value>true</value>
+                        </property>
+                      </activation>
+                      <build>
+                        <plugins>
+                          <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-gpg-plugin</artifactId>
+                            <executions>
+                              <execution>
+                                <id>sign-artifacts</id>
+                                <phase>install</phase>
+                                <goals>
+                                  <goal>sign</goal>
+                                </goals>
+                              </execution>
+                            </executions>
+                          </plugin>
+                        </plugins>
+                      </build>
+                    </profile>
     </profiles>
 </project>
