--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
@@ -27,9 +27,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jboss.as</groupId>
-        <artifactId>jboss-as-parent</artifactId>
-        <version>7.1.1.Final</version>
+        <groupId>org.mobicents.servlet.sip</groupId>
+		<artifactId>sip-servlets-bootstrap</artifactId>
+		<version>1.7.0-SNAPSHOT</version>
+		<relativePath>../.././pom.xml</relativePath>
     </parent>
 
     <groupId>org.mobicents.servlet.sip.containers</groupId>
@@ -39,40 +40,10 @@
 
     <name>JBoss Application Server: Mobicents Sip Servlets Adaptation Layer</name>
 	<description>>JBoss Application Server: Mobicents Sip Servlets Adaptation Layer</description>
-	<url>http://www.mobicents.org</url>
 
     <properties>
-        <!-- MSS -->
-        <mobicents.sip-servlets.version>1.7.0-SNAPSHOT</mobicents.sip-servlets.version>
         <junit.version>4.1</junit.version>
-        <jain-sip-api.version>1.2</jain-sip-api.version>
-        <jain-sip-ri.version>1.2.X-SNAPSHOT</jain-sip-ri.version>
-        <mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
-        <mobicents.cluster.version>1.12</mobicents.cluster.version>
-        <mobicents.balancer.version>1.5-SNAPSHOT</mobicents.balancer.version>
-        <mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-        <mobicents.jain.sip.ext.version>1.1-SNAPSHOT</mobicents.jain.sip.ext.version>
-        <dnsjava.version>2.1.0</dnsjava.version>
     </properties>
-
-	<distributionManagement>
-	    <repository>
-	      <id>mobicents-releases-repository</id>
-	      <name>Mobicents Releases Repository</name>
-	      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-	    </repository>
-	    <snapshotRepository>
-	      <id>mobicents-snapshots-repository</id>
-	      <name>Mobicents Snapshots Repository</name>
-	      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-	    </snapshotRepository>
-	  </distributionManagement>
-
-	 <scm>
-                <connection>scm:git:https://code.google.com/p/sipservlets/</connection>
-                <developerConnection>scm:git:https://code.google.com/p/sipservlets/</developerConnection>
-                <url>https://code.google.com/p/sipservlets/</url>
-        </scm>
 
     <build>
         <plugins>
@@ -87,6 +58,7 @@
             </plugin>
         </plugins>
     </build>
+
 <pluginRepositories>
 <pluginRepository>
          <id>zanata-releases</id>
@@ -99,82 +71,7 @@
             <enabled>false</enabled>
          </snapshots>
       </pluginRepository>
-<pluginRepository>
-                          <id>mobicents-public-repository-group</id>
-                          <name>Mobicens Public Maven Repository Group</name>
-                          <url>https://oss.sonatype.org/content/groups/public</url>
-                          <layout>default</layout>
-                          <releases>
-                            <enabled>true</enabled>
-                            <updatePolicy>never</updatePolicy>
-                          </releases>
-                          <snapshots>
-                            <enabled>true</enabled>
-                            <updatePolicy>never</updatePolicy>
-                          </snapshots>
-                </pluginRepository>
-		<pluginRepository>
-			<id>jboss-public-repository-group</id>
-			<name>JBoss Public Maven Repository Group</name>
-			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-		</pluginRepository>
 </pluginRepositories>
-
-
-<repositories>
-		<repository>
-                          <id>mobicents-public-repository-group</id>
-                          <name>Mobicens Public Maven Repository Group</name>
-                          <url>https://oss.sonatype.org/content/groups/public</url>
-                          <layout>default</layout>
-                          <releases>
-                            <enabled>true</enabled>
-                            <updatePolicy>never</updatePolicy>
-                          </releases>
-                          <snapshots>
-                            <enabled>true</enabled>
-                            <updatePolicy>never</updatePolicy>
-                          </snapshots>
-                </repository>
-		<repository>
-			<id>jboss-public-repository-group</id>
-			<name>JBoss Public Maven Repository Group</name>
-			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>jboss-deprecated-repository</id>
-			<name>JBoss Deprecated Maven Repository</name>
-			<url>https://repository.jboss.org/nexus/content/repositories/deprecated/ 
-	            </url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-		</repository>
-	</repositories>
 
     <dependencies>
 
@@ -188,11 +85,13 @@
         <dependency>
             <groupId>org.jboss.as</groupId>
             <artifactId>jboss-as-web</artifactId>
+	    <version>7.1.1.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.web</groupId>
             <artifactId>jbossweb</artifactId>
+	    <version>7.0.10.Final</version>
         </dependency>
 
         <dependency>
@@ -212,48 +111,48 @@
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-impl</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-spec</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-annotations</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-jruby</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-client</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-core-api</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mobicents.servlet.sip.containers</groupId>
             <artifactId>sip-servlets-as7</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -267,7 +166,7 @@
         <dependency>
             <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
-            <version>${dnsjava.version}</version>
+		<version>2.0.6</version>
             <scope>provided</scope>
         </dependency>
 
@@ -281,18 +180,23 @@
         <dependency>
             <groupId>org.mobicents.servlet.sip</groupId>
             <artifactId>sip-servlets-application-router</artifactId>
-            <version>${mobicents.sip-servlets.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-        </dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+			<scope>provided</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+			<scope>provided</scope>
+		</dependency>
+		
 
         <dependency>
             <groupId>log4j</groupId>
@@ -337,31 +241,5 @@
                 </plugins>
             </build>
         </profile>
-	<profile>
-                      <id>release-sign-artifacts</id>
-                      <activation>
-                        <property>
-                          <name>performRelease</name>
-                          <value>true</value>
-                        </property>
-                      </activation>
-                      <build>
-                        <plugins>
-                          <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-gpg-plugin</artifactId>
-                            <executions>
-                              <execution>
-                                <id>sign-artifacts</id>
-                                <phase>install</phase>
-                                <goals>
-                                  <goal>sign</goal>
-                                </goals>
-                              </execution>
-                            </executions>
-                          </plugin>
-                        </plugins>
-                      </build>
-                    </profile>
     </profiles>
 </project>
