--- a/sip-servlets-client/pom.xml
+++ b/sip-servlets-client/pom.xml
@@ -41,9 +41,8 @@
 					<eclipseProjectName>sip-servlets-client</eclipseProjectName>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--plugin>
         		<artifactId>maven-javadoc-plugin</artifactId>
-        		<!-- Note: Older versions will not work. -->
         		<version>2.6.1</version>        	
         			<configuration>
 					    <doclet>org.jboss.apiviz.APIviz</doclet>
@@ -68,7 +67,7 @@
           				 <docfilessubdirs>true</docfilessubdirs>
           				 <overview>${basedir}/src/javadoc/overview.html</overview>
 			        </configuration>
-      		</plugin>
+      		</plugin-->
 		</plugins>
 	</build>			
 	<profiles>
