--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
@@ -28,7 +28,7 @@
         <groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
 		<version>1.8.0-SNAPSHOT</version>
-		<relativePath>../.././pom.xml</relativePath>
+		<relativePath>../../../pom.xml</relativePath>
     </parent>
 
     <groupId>org.mobicents.servlet.sip.containers</groupId>
