--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
@@ -9,7 +9,7 @@ org.mobicents.level=ALL
 java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.FileHandler.level=ALL
+java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.pattern=./load-balancer-TEMPLATE.log.txt
 
