--- a/containers/sip-servlets-as7-drop-in/build-mobicents-modules/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/build-mobicents-modules/pom.xml
@@ -47,6 +47,7 @@
         <generated.configs.examples>${generated.configs}/docs/examples/configs</generated.configs.examples>
         <generated.configs.src.dir>${basedir}/src/main/resources</generated.configs.src.dir>
         <!-- MSS -->
+	<jboss.as.release.version>7.1.1.Final</jboss.as.release.version>
         <junit.version>4.1</junit.version>
 	<version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
 	<version.rhino.js>1.7R2</version.rhino.js>
@@ -58,6 +59,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
+		<version>1.6</version>
                 <inherited>false</inherited>
                 <executions>
                     <!--  See src/resources/configuration/ReadMe.txt for how the configuration assembly works -->
