--- a/sip-servlets-arquillian-testsuite/simple/MultiHomeUACTest/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple/MultiHomeUACTest/pom.xml
@@ -44,7 +44,7 @@
 
 		<!-- Mobicents -->
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-catalina</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -71,7 +71,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-tomcat-jboss4</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -112,7 +112,8 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+<!-- 			<version>1.7.0-SNAPSHOT</version> -->
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
