--- a/sip-servlets-arquillian-testsuite/click2call/pom.xml
+++ b/sip-servlets-arquillian-testsuite/click2call/pom.xml
@@ -38,7 +38,7 @@
 
 		<!-- Mobicents -->
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-catalina</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -89,7 +89,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-tomcat-jboss4</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -143,7 +143,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+<!-- 			<version>1.7.0-SNAPSHOT</version> -->
 		</dependency>
 	</dependencies>
 
