--- a/sip-servlets-arquillian-testsuite/simple/ShootistSipServletTest/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple/ShootistSipServletTest/pom.xml
@@ -38,7 +38,7 @@
 
 		<!-- Mobicents -->
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-catalina</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -77,7 +77,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-tomcat-jboss4</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -125,7 +125,8 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<scope>provided</scope>
+			<!-- 			<version>1.7.0-SNAPSHOT</version> -->
 		</dependency>
  
 		<dependency>
