--- a/sip-servlets-arquillian-testsuite/simple/ShootistTelURLSipServletTest/.settings/org.eclipse.jdt.core.prefs
+++ b/sip-servlets-arquillian-testsuite/simple/ShootistTelURLSipServletTest/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Mon Feb 20 19:10:29 EET 2012
+#Wed May 16 11:47:49 EEST 2012
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.source=1.6
