--- a/sip-servlets-arquillian-testsuite/simple/ShootmeSipServletTest/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple/ShootmeSipServletTest/pom.xml
@@ -36,7 +36,7 @@
 
 		<!-- Mobicents -->
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-catalina</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -70,7 +70,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mobicents.servlet.sip</groupId>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-tomcat-jboss4</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -118,7 +118,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+<!-- 			<version>1.7.0-SNAPSHOT</version> -->
 		</dependency>
 		<!-- <dependency> <groupId>org.jboss.arquillian.container</groupId> <artifactId>mss-arquillian-extension</artifactId> 
 			<version>1.0.0-SNAPSHOT</version> </dependency> -->
