--- a/sip-servlets-arquillian-testsuite/simple/ShootmeSipServletTest/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple/ShootmeSipServletTest/pom.xml
@@ -105,23 +105,21 @@
 		<dependency>
 			<groupId>org.cafesip.sipunit</groupId>
 			<artifactId>sipunit</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${version.sipunit}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.arquillian.container</groupId>
 			<artifactId>mss-tomcat-embedded-6</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${version.mss.arquillian}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-<!-- 			<version>1.7.0-SNAPSHOT</version> -->
 		</dependency>
-		<!-- <dependency> <groupId>org.jboss.arquillian.container</groupId> <artifactId>mss-arquillian-extension</artifactId> 
-			<version>1.0.0-SNAPSHOT</version> </dependency> -->
+		
 	</dependencies>
 
 	<build>
