--- a/sip-servlets-arquillian-testsuite/simple-tc7/ShootistSipServletTest-tc7/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple-tc7/ShootistSipServletTest-tc7/pom.xml
@@ -67,7 +67,13 @@
 		<dependency>
 			<groupId>javax.sip</groupId>
 			<artifactId>jain-sip-api</artifactId>
-			<version>1.2</version>
+			<version>${jain-sip-api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.sip</groupId>
+			<artifactId>jain-sip-ri</artifactId>
+			<version>${jain-sip-ri.version}</version>
 		</dependency>
 
 		<dependency>
